--- a/ansible/unix-packages/tasks/main.yml
+++ b/ansible/unix-packages/tasks/main.yml
@@ -6,7 +6,7 @@
 # On apt-get target
 - apt_repository: repo={{ item.value.repository_url }} state=present
   with_dict: "{{ packages_file.repositories | default({}) }}" 
-  when: packages_file.package is defined   
+  when: packages_file.package is defined and (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu')
   become: true
 
 # On apt-get target
@@ -15,18 +15,19 @@
     keyserver: "{{ item.value.keyserver_url }}"
     id: "{{ item.value.keyserver_id }}"
   with_dict: "{{ packages_file.repositories | default({}) }}"  
-  when: packages_file.package is defined  
+  when: packages_file.package is defined  and (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu')
   become: true
 
 # apt-get update
 - name: apt-get update
   apt:
     update_cache: yes
+  when: (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu')
   become: true
-
+  
 # install packages
 - apt: name={{ item.value.package_name }} state={{ item.value.package_state }}
   with_dict: "{{ packages_file.packages  | default({}) }}"
-  when: packages_file.package is defined  
+  when: packages_file.package is defined and (ansible_distribution == 'Debian' or ansible_distribution == 'Ubuntu') 
   become: true
 
