--- a/ansible/custom-roles/tasks/main.yml
+++ b/ansible/custom-roles/tasks/main.yml
@@ -12,4 +12,5 @@
   include_role:
     name: "{{ custom_roles_dir }}{{ item.value.name }}"  
   with_dict: "{{ customroles_file.roles }}"
+  when: customroles_file.roles is defined
   
